added dynamic highlighting

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,8 @@ body {
     border: 1px solid black;
     padding: 5px;
 }
+.search-bar {
+    margin-bottom: 10px;
+    display: flex; 
+    align-items: center;
+}
